Cambiado el titulo de la pagina

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -3,13 +3,13 @@ html(lang="es")
 	head
 		meta(charset="UTF-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
-		title Porfolio - Puri
+		title Porfolio - PuriDev
 		link(rel="stylesheet", href="css/styles.css")
 	body
 		header.header
 			.group
 				.logo
-					a(href="#").logo__link Web
+					a(href="#").logo__link PuriDev
 
 				.toggle#toggle-menu
 					.toggle__menu
